commons_project/static/css/style.css
body {
    margin: 0 auto;
    width: 960px;
    font-family: helvetica, arial, sans-serif;
    border: 1px solid #ddd;
    padding: 0;
    color: #403D3E;
    }

header {
 
    padding: .5em;
    margin: 0em;

}

#content-wrapper{
    border: 1px solid #aaa;

    margin: .2em 0em 0em 0em;

}

h1 {
    font-size: 180%;
    margin: .4em 0em 0em .5em;
}

#logo {
    margin: 0em 0em 0em 0em;
    -webkit-margin-before: 0em;
-webkit-margin-after: 0em;
-webkit-margin-start: 0px;
-webkit-margin-end: 0px;
}
#logo a {
    color:#403D3E;
}

h2 {
    margin: .4em .3em .3em .8em;
    font-size: 140%;
    display: inline-block;

}

h2 img {
    margin: 0em .3em 0em .1em;
}

h3 {
    margin: .2em .3em 1em 1.5em;
}

#welcome_text {
    margin-right: 4em;
    font-size: 140%;
    text-align: left;

}

ul {
    
    list-style:none;

    padding: 0;
}
ul li {}

.actions_features li{
    padding .7em 2em;
    text-decoration: none;
    margin: .6em 0em 0em 1em;
    vertical-align:top;

}

.actions_features li img {
    margin: 0em .3em 0em 0em;
    
}

.actions_features li a {
    margin: 0em .3em 0em 0em;
        vertical-align:top;
}
.actions_features {
    margin: 0em 0em 1em 0em;
}



a:link  {
    color:#3366aa; 
    text-decoration:none; 
}
a:visited           { color:#3366aa; text-decoration:none; }
a:hover             { color:#9E0B30; text-decoration:underline; }
a:active            { color:#9E0B30; text-decoration:underline; }

h2 a:visited {
    text-decoration: none;
}

#user {
    line-height:2em;
    float:right;
    white-space: nowrap;
    word-spacing: 1em;
    text-align:right;
    margin: 0em;

}
#user li a{
    padding: .4em 1em 0em 1em;

}

#share {
    float: right;
    
}

.nav-bar ul {

    padding 0;
    -webkit-margin-before: 0em;
    -webkit-margin-after: 0em;
    -webkit-margin-start: 0px;
    -webkit-margin-end: 0px;
    -webkit-padding-start: 0px;
    -webkit-padding-end: 0px;
     margin: 0em auto;
     list-style-type: none;
    margin: 0px 0px 0px 0px;
}

.nav-bar {
    display: block;
    clear:both;
    /*background-color: #eee;
     border: 1px solid #444;*/
     line-height:3em; 
     margin-bottom: .4em;
     
    

}

.nav-bar ul li {
    display: inline-block;
    text-align:center;
    background-color: #ddd;
}


.nav-bar ul li a{
 /*   height: 3em; */
    margin: 0 auto;
    padding: .8em .9em;
    color: #888;

    width:100%;
}

.nav-bar ul li a:hover {
    text-decoration: none;
    /* background-color:#aaa; */
}
.nav-bar ul li:hover {
    text-decoration: none;
    background-color:#eee;
    color:#aaa;
}

#rest-of-bar{
    width:67%

}

#search-nav  {
    float:right;
    padding: 0em .5em 0em 0em;
    
}

#rest-of-bar:hover {
    background-color:#ddd;

}

#search-field {

    color:#000;
    width:300px;
     outline:none;
    resize:none;
	height:1.2em;
	padding: 10px 15px 5px 10px;
	 -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
	
}

.button {
   border-top: 1px solid #aaa;
   background: #777;
/*   background: -webkit-gradient(linear, left top, left bottom, from(#3e779d), to(#65a9d7)); */
/*   background: -moz-linear-gradient(top, #3e779d, #65a9d7); */
   padding: .5em .5em;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
   -webkit-box-shadow: #ddd 0 1px 0;
   -moz-box-shadow: #ddd 0 1px 0;
   box-shadow: #ddd 0 1px 0;
   text-shadow: rgba(0,0,0,.4) 0 1px 0;
   color: white;
   font-size: .8em;
   font-family: Helvetica, Arial, Sans-Serif;
   text-decoration: none;
   vertical-align: middle;
   }
.button:hover {
   border-top-color: #bbb;
   background: #777;
   color: #ccc;
   }
.button:active {
   border-top-color: #666;
   border-left-color: #666;
   border-bottom-color: #777;
   border-right-color: #777;
   background: #777;
    -webkit-box-shadow: rgba(0,0,0,1) 0 -1px 0;
   -moz-box-shadow: rgba(0,0,0,1) 0 -1px 0;
   box-shadow: rgba(0,0,0,1) 0 -1px 0;
   }


#top-alert {
    height:50px;
    margin: 0em;
    padding: 0em;
    background-color: #eee;
    display: none;
    position: relative;
    z-index:20;
   /* width:960px;
    top: 0px; */

}

#top-alert h2 {
   margin 3em 3em 3em 3em;
}



.sort-bar {
    height: 3em;
    margin: 2em 4em 1em 0em;
    background-color: #eee;
    padding: .2em 0em;
    
}

.sort-bar a {
    margin: .2em 2em .1em .1em;
    padding: 1em;
}

.list-filters {
    background-color:#eee;
    margin: 5em .7em 1em 2em;

    height: 20em;
}

.app-list {
    margin: .2em .2em .1em .1em;
    padding: .2em .2em .1em .1em;

}
.app-list img {
    
   vertical-align: bottom; 

}
.app-list a {
    
    margin: .2em 2em .1em .1em;

}


.app-list li {

    display: list-item;
    list-style:none;
    height: 3em;
   border-bottom: 1px solid #aaa;
   margin: 0em 4em 0em 0em;


}

.listed-app-name {
  
    vertical-align: middle;

}

.listed-app-name h3{
    display: block;
    font-size:120%;
    margin: 0em;
    
}
.listed-app-name {}

.star-ratings {
    display: inline-block;
    margin: 0em 1em 0em 0em;

}
.applink {
    padding: .1em .1em 3em .2em;
    line-height: 1em;
     vertical-align: middle;
}

.full-width {
  /*    border: 1px solid green; */
    margin: 1em .2em; 4em 1em;
    padding: .1em .2em .1em 1em;

}

.full-width p {
    margin:  0em 1em .5em 2em; 
}
.full-width h2 {
    margin:  0em 1em .5em 0em; 
}

.full-width ul {
  margin:  0em 1em .5em 0em; 
}
.full-width ul li {
  padding .7em 2em;
  text-decoration: none;
  margin: .6em 0em 0em 1em;
  vertical-align:top;
}
.full-width ul li a {
    margin: 0em .3em 0em 0em;
  
}

.left-col{

    margin: 0em 1em .5em 1em;
   /* padding: .1em 1em .1em 1em; */
}
.left-col p{
   
        font-size: 100%;
    text-align: center;

}
.right-col{
/*    border: 1px solid brown; */
    margin: 0em 1em .5em 1em;
    /*padding: .1em 1em .1em 1em;*/
    
}
.right-col h2 {
    margin-top: 0em;

}
.right-col p {

    font-size: 100%;
    text-align: center;
}

.centered {
    margin: 0em 1em 0em 1em;

}

.category-strip {
    border: 1px solid black;   
    margin: 0em 1em auto;
    height: 75px;

}
.cat-strip-item {
    display: inline-block;
    border: 1px solid black;  
    width: 5.7em;
    height: 4.6em;
    margin: 0em 0em 0em 2.24em;
    text-align: center;
}
.cat-strip-item img {
    display:block;
    width: 5.7em;
    height: 3.4em;
    background-color:pink;
    

}

.media-gallery-1col{
    height: 200px;
    background-color: pink;

}

.screenshot-strip {
/*    border: 1px solid black;   */
    margin-left: 3em;
    height: 3em;

}
.screenshot-strip li {
    display: inline-block;
    border: 1px solid #aaa;  
    width: 3em;
    height: 3em;
    margin: 0em .5em 0em 0em;
    text-align: center;
    background-color:pink;
}
.screenshot-strip-item img {
    display:block;
     width: 3em;
    height: 3em;

}

.jurisdictions { 
    height:10em;

}
.jurisdictions ul {
  /*     border: 1px solid #aaa; */
    margin: 0em 0em 0em 3em;

}

.user-strip {
/*    border: 1px solid black;   */
    margin-left: 3em;
    height: 3em;

}
.user-strip li {
    display: inline-block;
    border: 1px solid #aaa;  
    width: 3em;
    height: 3em;
    margin: 0em .5em 0em 0em;
    text-align: center;
}
.user-strip-item img {
    display:block;
     width: 3em;
    height: 3em;
    background-color:pink;
    

}

.seemore{
    float:right;
    margin: 0em 2.5em 1em 0em;
}

#djDebug{
letter-spacing:0;
word-spacing:0;

}









.footer {
    margin: 0em 0em .2em 0em;
    padding: .4em;
    text-align: center;

}

